[package]
name = "murpapier"
version = "0.2.0"
authors = ["PashmiDev <lowneonema@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallpaper = "2.0.1"
chrono = "0.4"
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }